# aastereo

./: CMakeLists.txt  README.md
config/: OPCIONES  stereo_config.xml  stereo_config_SGBM.xml
mains/: CMakeLists.txt  oneCalib.cpp  stereoCalib.cpp  stereoUD2separate.cpp  stereo_Energos.cpp  stereo_capture.cpp  stereo_evaluate.cpp  stereo_shell.cpp  stereo_shell_daemon.cpp
src/: CMakeLists.txt  CimgOneCalib.cpp  CimgOneCalib.h  CimgStereo.cpp  CimgStereo.h  CimgStereoCalib.cpp  CimgStereoCalib.h  CimgStereoDisplay.cpp  CimgStereoDisplay.h  distort.cpp  file_utilities.cpp  file_utilities.h  smartdisplay3.h  stereo_src_Energos.cpp  stereo_src_Energos.h  stereo_xmlconfig.cpp  stereovar_upv.cpp  stereovar_upv.h  string_utilities.cpp  string_utilities.h  xml_utilities.cpp  xml_utilities.h
